nav align corrections in mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -265,11 +265,13 @@ footer li a{
     margin: 0;
     width: 100%;
     padding: inherit;
+    text-align: center;
     
   }
 
   nav ul{
     margin: 0;
+    text-align: ;
   }
 
   nav li a{
